--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@ Esta asociación de naciones se sustenta en raíces comunes -que aún hoy se tra
   </div>
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-
+<iframe width="690" scrolling="no" height="400" frameborder="0" style=" border-width:0 " src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=
+plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"></iframe>
 <!-- CONTENIDO -->
     </div>
   </div>
@@ -50,12 +51,61 @@ Esta asociación de naciones se sustenta en raíces comunes -que aún hoy se tra
   </div>
   <div id="collapseThree" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-
+<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="600" width="800">
+<param name="quality" value="high">
+<param name="movie" value="http://www.aspaceosummit.org/aspa_countries.swf">
+<embed pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="http://www.aspaceosummit.org/aspa_countries.swf" type="application/x-shockwave-flash" height="600" width="800">
+</object>
 <!-- CONTENIDO -->
     </div>
   </div>
 </div>
 <!-- FIN UBICACION -->
+<!-- INICIO CONTACTO -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFour">
+      Contacto
+    </a>
+  </div>
+  <div id="collapseFour" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+
+<!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN CONTACTO -->
+<!-- INICIO FOTOS -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
+      Fotos
+    </a>
+  </div>
+  <div id="collapseFive" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+<object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=es-us&page_show_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2Fshow%2F&page_show_back_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2F&set_id=72157631550980955&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=109615"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=109615" allowFullScreen="true" flashvars="offsite=true&lang=es-us&page_show_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2Fshow%2F&page_show_back_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2F&set_id=72157631550980955&jump_to=" width="400" height="300"></embed></object>
+<!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN FOTOS -->
+<!-- INICIO PAISES MIEMBROS -->
+<div class="accordion-group">
+  <div class="accordion-heading">
+    <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseSix">
+      Paises Miembros
+    </a>
+  </div>
+  <div id="collapseSix" class="accordion-body collapse">
+    <div class="accordion-inner"><!-- CONTENIDO -->
+
+<!-- CONTENIDO -->
+    </div>
+  </div>
+</div>
+<!-- FIN PAISES MIEMBROS -->
 </div>
 
           
