--- a/index.html
+++ b/index.html
@@ -51,11 +51,25 @@ plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"
   </div>
   <div id="collapseThree" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-<object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" height="600" width="800">
-<param name="quality" value="high">
-<param name="movie" value="http://www.aspaceosummit.org/aspa_countries.swf">
-<embed pluginspage="http://www.macromedia.com/go/getflashplayer" quality="high" src="http://www.aspaceosummit.org/aspa_countries.swf" type="application/x-shockwave-flash" height="600" width="800">
-</object>
+<table class="table table-hover table-bordered table-striped">
+<tbody> 
+<tr> 
+	<th>Local</th>	<th>Mapa</th>
+</tr>
+</tbody>
+<tr>
+<td>Ministerio de Cultura</td><td><a class="btn btn-info" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a><td>
+</tr>
+<tr>
+<td>Teatro Nacional</td><td><a class="btn btn-info" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a><td>
+</tr>
+<tr>
+<td>Palacio de Gobierno</td><td><a class="btn btn-info" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a><td>
+</tr>
+<tr>
+<td>Swissotel</td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws"><i class="icon-map-marker icon-white"></i></a><td>
+</tr>
+</table>
 <!-- CONTENIDO -->
     </div>
   </div>
@@ -85,7 +99,7 @@ plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"
   </div>
   <div id="collapseFive" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-<object width="400" height="300"> <param name="flashvars" value="offsite=true&lang=es-us&page_show_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2Fshow%2F&page_show_back_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2F&set_id=72157631550980955&jump_to="></param> <param name="movie" value="http://www.flickr.com/apps/slideshow/show.swf?v=109615"></param> <param name="allowFullScreen" value="true"></param><embed type="application/x-shockwave-flash" src="http://www.flickr.com/apps/slideshow/show.swf?v=109615" allowFullScreen="true" flashvars="offsite=true&lang=es-us&page_show_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2Fshow%2F&page_show_back_url=%2Fphotos%2F65990097%40N03%2Fsets%2F72157631550980955%2F&set_id=72157631550980955&jump_to=" width="400" height="300"></embed></object>
+
 <!-- CONTENIDO -->
     </div>
   </div>
