--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@ plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"
 </tr>
 </tbody>
 <tr>
-<td>Ministerio de Cultura</td><td><a class="btn btn-info" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a><td>
+<td>Ministerio de Cultura</td><td><a class="btn btn-info" href="http://goo.gl/maps/Apq8a"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td>Teatro Nacional</td><td><a class="btn btn-info" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a><td>
+<td>Teatro Nacional</td><td><a class="btn btn-info" href="http://goo.gl/maps/sGbRW"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td>Palacio de Gobierno</td><td><a class="btn btn-info" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a><td>
+<td>Palacio de Gobierno</td><td><a class="btn btn-info" href="http://goo.gl/maps/4AA9u"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 <tr>
-<td>Swissotel</td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws"><i class="icon-map-marker icon-white"></i></a><td>
+<td>Swissotel</td><td><a class="btn btn-info" href="http://goo.gl/maps/RDCws"><i class="icon-map-marker icon-white"></i></a></td>
 </tr>
 </table>
 <!-- CONTENIDO -->
