--- a/index.html
+++ b/index.html
@@ -84,7 +84,37 @@ plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"
   </div>
   <div id="collapseFour" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-
+<table class="table table-hover table-bordered table-striped">
+<tbody> 
+<tr> 
+	<th>Horario</th><th>Actividad</th><th>Locación</th>
+</tr>
+</tbody>
+<tr>
+<td>8:30 h.</td><td colspan="2">Traslado desde los hoteles a la sede del Ministerio de Cultura</td>
+</tr>
+<tr>
+<td rowspan="2">9:00 h. a 10:30 h.</td><td> Reunión de coordinación UNASUR.</td><td>Sala Chimú</td>
+</tr>
+<tr>
+<td>Reunión de Coordinación Liga de <br />Estados Árabes (LEA)</td><td>Sala Mochica</td>
+</tr>
+<tr>
+<td>10:30 h.</td><td>Pausa Café</td><td>Patio de las Artes</td>
+</tr>
+<tr>
+<td>11:00 h. a 13:30 h.</td><td>Primera Sesión del Consejo de Altos<br />Oficiales ASPA</td><td>Sala Nasca</td>
+</tr>
+<tr>
+<td>13:30 h. a 15:30 h.</td><td>Almuerzo buffet</td><td>Comedor de delegados</td>
+</tr>
+<tr>
+<td>15:30 h. a 19:00 h.</td><td>Segunda Sesión del Consejo de Altos Oficiales ASPA</td><td>Sala Nasca</td>
+</tr>
+<tr>
+<td>19:00 h.</td><td colspan="2">Traslado hacia hoteles</td>
+</tr>
+</table>
 <!-- CONTENIDO -->
     </div>
   </div>
