--- a/index.html
+++ b/index.html
@@ -2,10 +2,65 @@
 <html><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
   <script src="static/js/jquery.js" type="text/javascript"></script>
   <script src="static/js/bootstrap.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="static/js/mootools-core-1.3-full-compat-yc.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"></script>
+<script src="static/js/jslideGallery.js" type="text/javascript"></script>
   <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
+  <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+<script>
+
+function initi(){
+var gallery = new slideGallery($$(".gallery"), {
+	steps: 2,
+	mode: "circle",
+	random: true,
+	autoplay: true,
+	duration: 1000,
+	speed: 700
+});
+}
+</script>
+<script>
+$(document).ready(function(){
+$.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?",
+  {
+    tags: "mount rainier",
+    tagmode: "any",
+    format: "json"
+  },
+  function(data) {
+    $.each(data.items, function(i,item){
+      $("<li>").append($("<img/>").attr("src", item.media.m).attr("width","240px")).appendTo("#listaimagenes");
+      if ( i == 8 ) return false;
+    });
+  });
+});
+initi();</script>
+
+<style>
+.gallery {
+    margin: 0px 0px 20px;
+    width: 964px;
+    position: relative;
+    overflow: hidden;
+}
+
+.gallery .holder {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    z-index: 2;
+}
+
+.gallery .holder ul {
+    margin: 0px;
+    padding: 0px;
+    list-style: none outside none;
+    width: 30000px;
+}
+</style>
 </head>
 <home>
 <div class="accordion" id="accordion2">
@@ -35,8 +90,38 @@ Esta asociación de naciones se sustenta en raíces comunes -que aún hoy se tra
   </div>
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-<iframe width="690" scrolling="no" height="400" frameborder="0" style=" border-width:0 " src="https://www.google.com/calendar/embed?showTitle=0&amp;showPrint=0&amp;showTabs=0&amp;showTz=0&amp;height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=
-plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"></iframe>
+<table class="table table-hover table-bordered table-striped">
+<caption><h3>Domingo 30</h3></caption>
+<tbody> 
+<tr> 
+	<th>Horario</th><th>Actividad</th><th>Locación</th>
+</tr>
+</tbody>
+<tr>
+<td>8:30 h.</td><td colspan="2">Traslado desde los hoteles a la sede del Ministerio de Cultura</td>
+</tr>
+<tr>
+<td rowspan="2">9:00 h. a 10:30 h.</td><td> Reunión de coordinación UNASUR.</td><td>Sala Chimú</td>
+</tr>
+<tr>
+<td>Reunión de Coordinación Liga de <br />Estados Árabes (LEA)</td><td>Sala Mochica</td>
+</tr>
+<tr>
+<td>10:30 h.</td><td>Pausa Café</td><td>Patio de las Artes</td>
+</tr>
+<tr>
+<td>11:00 h. a 13:30 h.</td><td>Primera Sesión del Consejo de Altos<br />Oficiales ASPA</td><td>Sala Nasca</td>
+</tr>
+<tr>
+<td>13:30 h. a 15:30 h.</td><td>Almuerzo buffet</td><td>Comedor de delegados</td>
+</tr>
+<tr>
+<td>15:30 h. a 19:00 h.</td><td>Segunda Sesión del Consejo de Altos Oficiales ASPA</td><td>Sala Nasca</td>
+</tr>
+<tr>
+<td>19:00 h.</td><td colspan="2">Traslado hacia hoteles</td>
+</tr>
+</table>
 <!-- CONTENIDO -->
     </div>
   </div>
@@ -84,37 +169,47 @@ plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"
   </div>
   <div id="collapseFour" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-<table class="table table-hover table-bordered table-striped">
-<tbody> 
-<tr> 
-	<th>Horario</th><th>Actividad</th><th>Locación</th>
-</tr>
-</tbody>
-<tr>
-<td>8:30 h.</td><td colspan="2">Traslado desde los hoteles a la sede del Ministerio de Cultura</td>
-</tr>
-<tr>
-<td rowspan="2">9:00 h. a 10:30 h.</td><td> Reunión de coordinación UNASUR.</td><td>Sala Chimú</td>
-</tr>
-<tr>
-<td>Reunión de Coordinación Liga de <br />Estados Árabes (LEA)</td><td>Sala Mochica</td>
-</tr>
-<tr>
-<td>10:30 h.</td><td>Pausa Café</td><td>Patio de las Artes</td>
-</tr>
-<tr>
-<td>11:00 h. a 13:30 h.</td><td>Primera Sesión del Consejo de Altos<br />Oficiales ASPA</td><td>Sala Nasca</td>
-</tr>
-<tr>
-<td>13:30 h. a 15:30 h.</td><td>Almuerzo buffet</td><td>Comedor de delegados</td>
-</tr>
-<tr>
-<td>15:30 h. a 19:00 h.</td><td>Segunda Sesión del Consejo de Altos Oficiales ASPA</td><td>Sala Nasca</td>
-</tr>
-<tr>
-<td>19:00 h.</td><td colspan="2">Traslado hacia hoteles</td>
-</tr>
-</table>
+
+
+<p>Jaime Pomareda<br />
+Ambassador<br />
+Director General of Economic Promotion<br />
+Phone (+511) 204 3360<br />
+dpe@rree.gob.pe<p>
+<p>
+Arturo Jarama<br />
+Minister<br />
+Director of Investments Promotion<br />
+Phone. (+511) 204 3384<br />
+ajarama@rree.gob.pe</p>
+<p>
+Miss Cielo Cano<br />
+Third Secretary<br />
+Direction of Investments Promotion<br />
+Phone (+511) 204 3364<br />
+ccano@rree.gob.pe</p>
+<p>
+Miss Silvana Mendoza<br />
+Third Secretary<br />
+Direction of Investments Promotion<br />
+Phone (+511) 204 3390<br />
+smendoza@rree.gob.pe</p>
+<p>
+Peru´s Society for Trade (COMEXPERU)<br />
+</p>
+<p>
+Miss Helga Scheuch<br />
+Trade Promotion Executive Officer<br />
+Phone: (+511) 625 7700<br />
+hscheuch@comexperu.org.pe</p>
+<p>
+Miss Jessica Luna Cárdenas<br />
+International Affairs Executive Officer<br />
+Phone (+511) 625 7700<br />
+jluna@comexperu.org.pe</p>
+
+
+
 <!-- CONTENIDO -->
     </div>
   </div>
@@ -129,7 +224,21 @@ plataformaintersectorial%40gmail.com&amp;color=%23A32929&amp;ctz=America%2FLima"
   </div>
   <div id="collapseFive" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
+<div class="gallery" id="images">
 
+<div class="holder">
+<ul style="margin-left: 0px;" id="listaimagenes">
+
+</ul>
+</div>
+<div class="control">
+	<a href="#" class="prev">prev</a>
+	<a href="#" class="next">next</a>
+	<a href="#" class="start">play</a>
+	<a href="#" class="stop">stop</a>
+</div>
+		
+</div>
 <!-- CONTENIDO -->
     </div>
   </div>
