--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
   <script src="static/js/jquery.js" type="text/javascript"></script>
   <script src="static/js/bootstrap.min.js" type="text/javascript"></script>
 <script type="text/javascript" src="static/js/mootools-core-1.3-full-compat-yc.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/mootools/1.4.5/mootools-yui-compressed.js"></script>
-<script src="static/js/jslideGallery.js" type="text/javascript"></script>
+<script type="text/javascript" src="static/js/slideGallery.js"></script>
   <link href="static/css/bootstrap-responsive.css" rel="stylesheet">
   <link href="static/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 <script>
-
-function initi(){
-var gallery = new slideGallery($$(".gallery"), {
-	steps: 2,
-	mode: "circle",
-	random: true,
-	autoplay: true,
-	duration: 1000,
-	speed: 700
-});
-}
+//window.addEvent("domready", function() {
+function init_images() {
+var gallery2 = new slideGallery($$(".gallery2"), {
+				steps: 1,
+				mode: "circle",
+				autoplay: true,
+				stop: ".stop",
+				start: ".start",
+				duration: 2000,
+				speed: 700
+});}
+//});
 </script>
 <script>
 $(document).ready(function(){
@@ -32,12 +32,14 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
   },
   function(data) {
     $.each(data.items, function(i,item){
-      $("<li>").append($("<img/>").attr("src", item.media.m).attr("width","240px")).appendTo("#listaimagenes");
-      if ( i == 8 ) return false;
+      $("<li>").append($("<img>").attr("src", item.media.m).attr("width","240px")).appendTo("#listaimagenes");
+      if ( i == 7 ) return false;
     });
-  });
+  }).complete(function() { init_images() });
+
 });
-initi();</script>
+//init_images();
+</script>
 
 <style>
 .gallery {
@@ -59,6 +61,16 @@ initi();</script>
     padding: 0px;
     list-style: none outside none;
     width: 30000px;
+}
+.gallery .holder ul li {
+    float: left;
+    width: 240px;
+    padding: 0px 5px 1px 0px;
+}
+.prev {
+    /*background: url("../images/btn-prev.png") no-repeat scroll 0% 0% transparent;*/
+    right: auto;
+    left: 10px;
 }
 </style>
 </head>
@@ -224,11 +236,9 @@ jluna@comexperu.org.pe</p>
   </div>
   <div id="collapseFive" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-<div class="gallery" id="images">
-
+<div class="gallery gallery2">
 <div class="holder">
 <ul style="margin-left: 0px;" id="listaimagenes">
-
 </ul>
 </div>
 <div class="control">
@@ -237,8 +247,8 @@ jluna@comexperu.org.pe</p>
 	<a href="#" class="start">play</a>
 	<a href="#" class="stop">stop</a>
 </div>
-		
 </div>
+		
 <!-- CONTENIDO -->
     </div>
   </div>
