--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
 </style>
 </head>
 <home>
+<div class="row-fluid">
+ <img src="static/img/aspa-logo.jpg" class="span2"/>
+</div>
+<div class="row-fluid">
 <div class="accordion" id="accordion2">
 <!-- INICIO QUE ES EL ASPA -->
 <div class="accordion-group">
@@ -270,7 +274,7 @@ jluna@comexperu.org.pe</p>
 </div>
 <!-- FIN PAISES MIEMBROS -->
 </div>
-
+</div>
           
 
 </home>
