--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ jluna@comexperu.org.pe</p>
   </div>
 </div>
 <!-- FIN CONTACTO -->
-<!-- INICIO FOTOS -->
+<!-- INICIO FOTOS 
 <div class="accordion-group">
   <div class="accordion-heading">
     <a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseFive">
@@ -301,7 +301,7 @@ jluna@comexperu.org.pe</p>
     </a>
   </div>
   <div id="collapseFive" class="accordion-body collapse">
-    <div class="accordion-inner"><!-- CONTENIDO -->
+    <div class="accordion-inner">--><!-- CONTENIDO 
 <div class="gallery gallery2">
 <div class="holder">
 <ul style="margin-left: 0px;" id="listaimagenes">
@@ -313,16 +313,17 @@ jluna@comexperu.org.pe</p>
 	<a href="#" class="start">play</a>
 	<a href="#" class="stop">stop</a>
 </div>
-</div>
+</div>-->
 		
-<!-- CONTENIDO -->
+<!-- CONTENIDO 
     </div>
   </div>
-</div>
+</div>-->
 <!-- FIN FOTOS -->
 </div>
 </div>
-          
-
+<div class="row-fluid" height="60">
+ <img src="static/img/gobierno.png" class="span2" />
+</div>
 </home>
 </html>
