--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ jluna@comexperu.org.pe</p>
 </div>
 </div>
 <div class="row-fluid" height="60">
- <img src="static/img/gobierno.png" class="span2" />
+ <img src="static/img/gobierno.png" class="span2" style="margin-bottom:30px;"/>
 </div>
 </home>
 </html>
