--- a/index.html
+++ b/index.html
@@ -72,6 +72,9 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
     right: auto;
     left: 10px;
 }
+table tr td {
+text-align: justify;
+}
 </style>
 </head>
 <home>
@@ -105,35 +108,37 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
   <div style="height: 0px;" id="collapseTwo" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
 <table class="table table-hover table-bordered table-striped">
-<caption><h3>Domingo 30</h3></caption>
+<caption><h3>Martes 02 de Octubre, 2012</h3></caption>
 <tbody> 
 <tr> 
-	<th>Horario</th><th>Actividad</th><th>Locación</th>
+	<th style="background-color:#ffffff;">Horario</th><th style="background-color:#ffffff;">Actividad</th>
 </tr>
 </tbody>
 <tr>
-<td>8:30 h.</td><td colspan="2">Traslado desde los hoteles a la sede del Ministerio de Cultura</td>
+<td>8:30 – 8:45 a.m.</td><td>Palabras de Bienvenida  <br />Sr.  Juan Jiménez, Presidente del Consejo de Ministros</td>
 </tr>
 <tr>
-<td rowspan="2">9:00 h. a 10:30 h.</td><td> Reunión de coordinación UNASUR.</td><td>Sala Chimú</td>
+<td>8:45 – 9:15 a.m.</td><td style="text-align: justify;">CLIMA DE INVERSIÓN: ¿En qué se sustenta el crecimiento   económico del Perú?, ¿Cuáles son las perspectivas?, ¿Mediante qué mecanismos incentiva el Estado peruano la inversión? 
+ <br />Sr.  Luis Miguel Castilla, Ministro de Economía y Finanzas del Perú</td>
 </tr>
 <tr>
-<td>Reunión de Coordinación Liga de <br />Estados Árabes (LEA)</td><td>Sala Mochica</td>
+<td>9:15 – 9:45 a.m.</td><td style="text-align: justify;">SOSTENIBLIDAD ENERGÉTICA: ¿De qué fuentes energéticas dispone el Perú?,  ¿Cómo se vienen desarrollando?, ¿Puede el Perú convertirse en un exportador neto de energía? <br />Sr.  Jorge Merino, Ministro de Energía y Minas del Perú</td>
 </tr>
 <tr>
-<td>10:30 h.</td><td>Pausa Café</td><td>Patio de las Artes</td>
+<td>9:45 – 10:15 a.m.</td><td style="text-align: justify;">INFRAESTRUCTURA PARA LA INTEGRACIÓN: ¿Cómo se viene articulando  la integración física del territorio peruano?, ¿Cómo participa la inversión privada  en el desarrollo de infraestructura?, ¿Cuál es la estrategia a seguir  para afianzar al Perú como hub del Pacífico Sudamericano? 
+ <br />Sr.  Carlos Paredes, Ministro de Transportes y Comunicaciones del Perú</td>
 </tr>
 <tr>
-<td>11:00 h. a 13:30 h.</td><td>Primera Sesión del Consejo de Altos<br />Oficiales ASPA</td><td>Sala Nasca</td>
+<td>10:15 – 10:45 a.m.</td><td style="text-align: justify;">DESARROLLO URBANO: ¿Cuál es el déficit de infraestructura urbana?,  ¿Cuál es la perspectiva de crecimiento urbano para los siguientes años?,   ¿Qué Programas impulsa  el Estado y cuál es la participación del sector privado?   
+ <br />Sr.  René Cornejo, Ministro de vivienda, Construcción y Saneamiento del Perú</td>
 </tr>
 <tr>
-<td>13:30 h. a 15:30 h.</td><td>Almuerzo buffet</td><td>Comedor de delegados</td>
+<td>10:45 – 11:15 a.m.</td><td style="text-align: justify;">AGRICULTURA DE ALTO VALOR: ¿En qué aspectos se basa la competitividad  del Perú como productor de alimentos?, ¿Qué proyectos refuerzan la competitividad  del país en la actividad agrícola?, ¿Cuáles son las oportunidades de inversión? 
+ <br />Sr.  Milton von Hesse, Ministro de Agricultura del Perú</td>
 </tr>
 <tr>
-<td>15:30 h. a 19:00 h.</td><td>Segunda Sesión del Consejo de Altos Oficiales ASPA</td><td>Sala Nasca</td>
-</tr>
-<tr>
-<td>19:00 h.</td><td colspan="2">Traslado hacia hoteles</td>
+<td>11:15 a.m. – 11:30 a.m.</td><td style="text-align: justify;">Palabras de clausura  
+ <br />Sr.  Javier Illescas, Director Ejecutivo de la Agencia de Promoción de Inversiones del Perú - PROINVERSION</td>
 </tr>
 </table>
 <!-- CONTENIDO -->
@@ -249,41 +254,41 @@ $.getJSON("http://api.flickr.com/services/feeds/photos_public.gne?jsoncallback=?
     <div class="accordion-inner"><!-- CONTENIDO -->
 
 
-<p>Jaime Pomareda<br />
-Ambassador<br />
-Director General of Economic Promotion<br />
-Phone (+511) 204 3360<br />
+<p>Jaime Pomareda 
+Ambassador 
+Director General of Economic Promotion 
+Phone (+511) 204 3360 
 <a href="mailto:dpe@rree.gob.pe">dpe@rree.gob.pe</a><p>
 <p>
-Arturo Jarama<br />
-Minister<br />
-Director of Investments Promotion<br />
-Phone. (+511) 204 3384<br />
+Arturo Jarama 
+Minister 
+Director of Investments Promotion 
+Phone. (+511) 204 3384 
 <a href="mailto:ajarama@rree.gob.pe">ajarama@rree.gob.pe</a></p>
 <p>
-Miss Cielo Cano<br />
-Third Secretary<br />
-Direction of Investments Promotion<br />
-Phone (+511) 204 3364<br />
+Miss Cielo Cano 
+Third Secretary 
+Direction of Investments Promotion 
+Phone (+511) 204 3364 
 <a href="mailto:ccano@rree.gob.pe">ccano@rree.gob.pe</a></p>
 <p>
-Miss Silvana Mendoza<br />
-Third Secretary<br />
-Direction of Investments Promotion<br />
-Phone (+511) 204 3390<br />
+Miss Silvana Mendoza 
+Third Secretary 
+Direction of Investments Promotion 
+Phone (+511) 204 3390 
 <a href="mailto:smendoza@rree.gob.pe">smendoza@rree.gob.pe</a></p>
 <p>
-Peru´s Society for Trade (COMEXPERU)<br />
+Peru´s Society for Trade (COMEXPERU) 
 </p>
 <p>
-Miss Helga Scheuch<br />
-Trade Promotion Executive Officer<br />
-Phone: (+511) 625 7700<br />
+Miss Helga Scheuch 
+Trade Promotion Executive Officer 
+Phone: (+511) 625 7700 
 hscheuch@comexperu.org.pe</p>
 <p>
-Miss Jessica Luna Cárdenas<br />
-International Affairs Executive Officer<br />
-Phone (+511) 625 7700<br />
+Miss Jessica Luna Cárdenas 
+International Affairs Executive Officer 
+Phone (+511) 625 7700 
 jluna@comexperu.org.pe</p>
 
 
