--- a/index.html
+++ b/index.html
@@ -76,9 +76,10 @@ table tr td {
 text-align: justify;
 }
 </style>
+<title>III Cumbre ASPA</title>
 </head>
-<home>
-<div class="row-fluid" height="60">
+<body>
+<div class="row-fluid">
  <img src="static/img/aspa-logo.jpg" class="span2" />
 </div>
 <div class="row-fluid">
@@ -327,8 +328,8 @@ jluna@comexperu.org.pe</p>
 <!-- FIN FOTOS -->
 </div>
 </div>
-<div class="row-fluid" height="60">
+<div class="row-fluid">
  <img src="static/img/gobierno.png" class="span2" style="margin-bottom:30px;"/>
 </div>
-</home>
+</body>
 </html>
