--- a/index.html
+++ b/index.html
@@ -166,7 +166,69 @@ text-align: justify;
   </div>
   <div style="height: 0px;" id="info-peru1" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
-     <p><h1>AQUI EL CONTENIDO</h1></p>
+     <p style="text-align:justify">El Perú es una República democrática, social, independiente y soberana. El Estado peruano es uno e indivisible. Su Gobierno es unitario, representativo y descentralizado, y se organiza según el principio de la separación de poderes. Su ordenamiento jurídico se rige actualmente por la Constitución Política promulgada el 29 de diciembre de 1993.
+El estado peruano tiene en su estructura tres poderes independientes: Poder Ejecutivo, Poder Legislativo (con un Parlamento Unicameral de 130 miembros) y Poder Judicial. Las autoridades del Poder Ejecutivo y Legislativo son elegidas por sufragio popular. 
+El actual Presidente Constitucional de la República, Ollanta Humala Tasso, asumió el cargo el 28 de julio del 2011 y dirigirá el país hasta el 28 de Julio del 2016. 
+
+<br /> <b>Ubicación Geográfica</b> <br />
+
+El Perú se encuentra situado en la parte central y occidental de América del Sur. Tiene una extensión de 1 285 216 km2  ó 496 223 millas. Es el tercer país más extenso de Sudamérica. Limita al norte con Ecuador y Colombia, al sur con Chile, y al este con Brasil y Bolivia. Al oeste, el Océano Pacífico baña sus costas.
+Población
+Según el último Censo Nacional de Población del 2007, el Perú tiene 28.2 millones de habitantes aproximadamente, de los cuales el 30.9% se encuentra en Lima Metropolitana (ciudad capital) y 3.1% en Lima provincias. En el norte del país (Tumbes, Piura, Lambayeque, Cajamarca, La Libertad, Ancash) se concentra el 25.7% de la población; en el sur (Cusco, Apurímac, Arequipa, Moquegua, Puno y Tacna) el 16.2%; en el centro (Huánuco, Pasco, Junín, Ayacucho, Huancavelica e Ica) el 14.8%; y en el oriente (Loreto, Amazonas, San Martín, Ucayali y Madre de Dios) el 9.3%. 
+La población del Perú, según áreas geográficas, se distribuye en 14.9 millones de habitantes en la costa, 8.7 millones en la sierra y 3.6 millones en la selva. El 75.9% se concentra en zonas urbanas y 24.1% en zonas rurales.
+En cuanto a su distribución por edades, el 30.5% de la población tiene entre 0 y 14 años, el 63.1% entre 15 y 64 años, y el 6.4% entre 65 a más años. La población proyectada para fines de 2012 por el Instituto Nacional de Estadística e Informática es de 30.1 millones de habitantes.
+Historia 
+
+El Perú es cuna de grandes culturas que hoy asombran al mundo. En su territorio se construyó la ciudad más antigua de América: Caral, considerada por la UNESCO como Patrimonio Cultural de la Humanidad. Los vestigios de esta compleja civilización preinca, se encuentran en el Valle de Supe, 200 kilómetros al norte de Lima, la capital del país. Con aproximadamente 5.000 años de antigüedad, Caral fue contemporánea con otras civilizaciones como las de China, Egipto, India y Mesopotamia.
+
+Perú también es cuna de otras culturas pre Incas que alcanzaron gran conocimiento y desarrollo en áreas como la agricultura, la ganadería, la textilería y la construcción. Chavín (1000 a.C.), Cupisnique (900 a.C.), Vicus (100 a.C.) y Paracas (400 a.C.), por ejemplo, destacaron mundialmente por la alta calidad de sus textiles, cuyos colores se mantienen intactos hasta hoy. Las culturas Mochica (0-600 d.C), Nazca (0-800 d.C), Tiahuanaco (200-800 d.C), Chimú (900–1440 d.C) dejaron también al mundo muestras de su grandeza en el desarrollo de técnicas para la construcción de sus ciudadelas, edificaciones, acueductos, sistemas de riego y orfebrería sofisticada.
+
+Posteriormente, la Cultura Inca (siglos XIII al XVI), una de las más notables de la historia, ha dejado un importante legado de conocimientos, avanzados para su tiempo, que hoy siguen despertando el asombro de la humanidad.
+
+<br /> <b>Economía y Desarrollo Humano </b> <br />
+
+En el período de julio 2011 a junio de 2012 el Perú ha logrado un crecimiento económico de 6%, superior a la trazada de 5,7%, considerando que el Producto Bruto Interno (PBI) en el 2011 se incrementó en 6.9%. De este modo y, siguiendo la tendencia positiva de la economía, se proyecta que durante los años 2012 y 2013 el crecimiento del PBI sea del orden del 6% anual. 
+
+Cabe resaltar que al cierre del 2011, el PBI alcanzó un valor de US$ 176,728 millones. La economía peruana acumuló 10 años de crecimiento consecutivo a tasas superiores al promedio de la región latinoamericana. 
+
+La inversión privada registró durante el 2011 un incremento de 11.7%, alcanzando un valor cercano a los US$ 35,000 millones.
+
+Asimismo, los flujos de capital extranjero continuaron en expansión, registrándose un nivel de inversión directa extranjera neta de US$ 7,548 millones (21% del valor total de la inversión privada). Esta inversión se ha concentrado principalmente en minería, finanzas, comunicaciones, industria y energía, reflejando la creciente fortaleza del mercado interno.
+
+Durante la última década, gracias a la apertura de la economía y al dinamismo de los sectores construcción, minería y comercio, el Perú registró la mayor tasa de crecimiento medio de América Latina (5,9%), por lo que fue clasificado como país de ingreso mediano alto según los indicadores de desarrollo humano establecido por el Programa de Naciones Unidas para el Desarrollo - PNUD.
+
+Entre 2005 y 2010, el crecimiento económico y la creación de programas sociales en beneficio de las poblaciones más vulnerables, posibilitaron un incremento del Índice de Desarrollo Humano (IDH) de 0,695 a 0,724 (ascenso de 4 puestos en la clasificación mundial); y redujeron la pobreza y la pobreza extrema en 34,8% y 11,5%, respectivamente.
+
+<br /> <b>Productividad</b> <br />
+
+La zona costera es una estrecha franja de 2 500 Km de longitud mayormente árida, que cuenta con 52 valles regados por ríos que descienden de la vertiente occidental de los Andes. En ella se asientan ciudades importantes como Lima, Trujillo, Piura, Chiclayo, Ica y Tacna, entre otras.
+
+El mar peruano es la parte del Océano Pacífico. Su gran riqueza ictiológica es resultado de las corrientes marinas de Humboldt y del Niño y en sus aguas existen diversas variedades de peces, cuya abundancia hace del Perú uno de los primeros países pesqueros del mundo. El Callao, Paita, Chimbote, Ilo, Matarani, Pisco y Salaverry son los puertos principales del país.
+
+La Sierra, rica en minerales, se extiende sobre la Cordillera de los Andes. En esta región, donde hoy vive el 37% de la población peruana, establecieron los incas su capital, en los valles del Cusco. 
+
+La Selva, región de bosques y ríos, representa el 56% del territorio peruano y el 11% de su población. Esta región es parte de la llanura amazónica, el bosque tropical más extenso del orbe. Además de una gran diversidad de especies de flora, fauna y ríos navegables, alberga importantes yacimientos de petróleo y gas en el subsuelo. 
+
+El territorio peruano tiene casi todos los climas del planeta, con notables recursos naturales, mineros y energéticos. En el mundo, el Perú es el  primer exportador de espárragos y páprika, primer productor de harina y aceite de pescado, fibras de alpaca y vicuña, segundo productor de cobre y tercero de plata y tiene el noveno lugar en el ámbito mundial en bosques naturales y el segundo en Sudamérica.
+
+En Latinoamérica es el primer productor de oro, plata, zinc, estaño, plomo; segundo productor de cobre y molibdeno; segundo por su área de bosques naturales; uno de los principales exportadores textiles y tercer país en extensión en Sudamérica. 
+El Perú es considerado un país megadiverso dado que reúne 84 de las 104 “zonas de vida” posibles en el orbe. Está entre los 10 mejores destinos turísticos.  Es el país donde nace el río más largo y caudaloso en el mundo, el Amazonas, y donde se construyó el ferrocarril a mayor altitud en el mundo y que ahora funciona con el gas natural de Camisea. 
+
+El área peruana de bosques naturales, que incluye árboles de maderas finas como cedro y caoba, se estima en poco menos de 80 millones de hectáreas. 
+
+Perú es uno de los países que ha aportado más especies a la alimentación mundial, con productos ahora “globalizados” como la papa, el tomate, el camote, el maíz, el maní, la quinua, el achiote y muchos otros. El Perú tiene cerca de 4 400 especies de plantas nativas de usos conocidos, destacando las de propiedades alimenticias, medicinales, ornamentales, colorantes, gastronómicas, aromáticas y cosméticas.  Y aún hay cuantiosos recursos biológicos y genéticos por investigar y aprovechar.  
+
+Asimismo, resalta por su  gastronomía, considerada entre las mejores del mundo, basada en la calidad y diversidad de sus ingredientes y su licor nacional, el Pisco, sumando ambos numerosos premios y reconocimientos internacionales.  
+
+Existen también numerosos glaciares, lagos, lagunas y ríos en todo el vasto y rico territorio peruano. Entre ellos está el lago Titicaca, el lago navegable más alto del mundo; la Cordillera Blanca, la cordillera tropical más alta del planeta con decenas de picos de más de 6 000 metros de altura; y los cañones de Colca y Cotahuasi, los más profundos de la tierra.
+
+<br /> <b>Religión</b> <br />
+
+En el Perú existe libertad de culto, pero la mayoría de peruanos profesa la religión católica (81%), en segundo lugar la evangélica (12.5%) y luego una variedad de comunidades religiosas como la judía, protestante e islámica.
+
+<br /> <b>Idiomas</b> <br />
+
+El idioma oficial es el español expresado por el  84% de la población. Sin embargo, existen 51 lenguas de 16 familias lingüísticas, la más importante es el quechua hablado por el 13% de la población, seguido por el aymara (1.72%), el asháninka (0.26%). </p></p>
     <!-- CONTENIDO -->
     </div>
   </div>
@@ -190,7 +252,7 @@ text-align: justify;
 <!-- INICIO QUE ES EL ASPA -->
 <div class="accordion-group">
   <div class="accordion-heading">
-    <a class="accordion-toggle" href="http://www.promperu.gob.pe" target="_blank">
+    <a class="accordion-toggle" href="http://hiddentreasures.peru.travel/" target="_blank">
       Perú un país por explorar
     </a>
   </div>
@@ -254,46 +316,45 @@ text-align: justify;
   <div id="collapseFour" class="accordion-body collapse">
     <div class="accordion-inner"><!-- CONTENIDO -->
 
-
-<p>Jaime Pomareda 
-Ambassador 
-Director General of Economic Promotion 
-Phone (+511) 204 3360 
-<a href="mailto:dpe@rree.gob.pe">dpe@rree.gob.pe</a><p>
 <p>
-Arturo Jarama 
-Minister 
-Director of Investments Promotion 
-Phone. (+511) 204 3384 
-<a href="mailto:ajarama@rree.gob.pe">ajarama@rree.gob.pe</a></p>
+<a href="www.rree.gob.pe" target="_blank"> Cancillería</a><br />
+Ministro Jorge Salas<br />
+Dir. de la Oficina General de Comunicación<br />
+<a href="mailto:jsalasr@rree.gob.pe">jsalasr@rree.gob.pe</a>
+</p> 
 <p>
-Miss Cielo Cano 
-Third Secretary 
-Direction of Investments Promotion 
-Phone (+511) 204 3364 
-<a href="mailto:ccano@rree.gob.pe">ccano@rree.gob.pe</a></p>
-<p>
-Miss Silvana Mendoza 
-Third Secretary 
-Direction of Investments Promotion 
-Phone (+511) 204 3390 
-<a href="mailto:smendoza@rree.gob.pe">smendoza@rree.gob.pe</a></p>
-<p>
-Peru´s Society for Trade (COMEXPERU) 
+Hugo Contreras<br />
+Sub Dir Prensa y Difusión Ofic Gral Comunicaciones<br />
+<a href="mailto:hcontreras@rree.gob.pe"> hcontreras@rree.gob.pe>hcontreras@rree.gob.pe</a>
 </p>
 <p>
-Miss Helga Scheuch 
-Trade Promotion Executive Officer 
-Phone: (+511) 625 7700 
-hscheuch@comexperu.org.pe</p>
+Cielo Cano Gallardo<br />
+Dirección de Promoción de Inversiones<br />
+<a href="mailto:ccano@rree.gob.pe">ccano@rree.gob.pe</a>
+</p>
 <p>
-Miss Jessica Luna Cárdenas 
-International Affairs Executive Officer 
-Phone (+511) 625 7700 
-jluna@comexperu.org.pe</p>
-
-
-
+<a href="www.comexperu.org.pe" target="_blank">COMEX</a><br />
+Ricardo Paredes Castro<br />
+Gte. de Estudios Económicos y Consultoría Empresarial<br />
+<a href="mailto:rparedes@comexperu.org.pe">rparedes@comexperu.org.pe</a>
+</p>
+<p>
+<a href="www.proinversion.gob.pe" target="_blank">ProInversión</a><br />
+Milagros Rasmussen Albitres<br />
+Comunicaciones e Imagen Institucional<br />
+<a href="mailto:mrasmussen@proinversion.gob.pe">mrasmussen@proinversion.gob.pe</a>
+</p>
+<p> 
+<a href="http://www.pcm.gob.pe/EstructuraOrg/ogcs.html" target="_blank">Oficina General de Comunicación Social PCM</a><br />
+Elvis Mori Macedo<br />
+Redes Sociales<br />
+<a href="mailto:elvismori@gmail.com">elvismori@gmail.com</a>
+</p>
+<p>
+Patricia Escudero Ascencio<br />
+Prensa y Comunicaciones<br />
+<a href="mailto:pescudero@presidencia.gob.pe">pescudero@presidencia.gob.pe</a>
+</p>
 <!-- CONTENIDO -->
     </div>
   </div>
