--- a/palacio.html
+++ b/palacio.html
@@ -22,7 +22,7 @@
 	line-height:1.3;text-align:justify;padding-left:10px;
 }
 #comedor{
-padding:20px 0px 10px 10px;width:93%;
+width:93%;padding-left:10px;
 }
 </style>
 <title>Palacio de Gobierno con historia</title>
@@ -30,7 +30,7 @@ padding:20px 0px 10px 10px;width:93%;
 <body>
 <div class="row">
 	<div class="modal span6">
-		<div class="row">
+		<div class="row-fluid">
                         <div class="titulo">El Gran Comedor</div>
 			<div class="span3">
 			<img src="static/img/comedor.jpg" id="comedor" />
