--- a/index.html
+++ b/index.html
@@ -544,8 +544,8 @@ Dir. de la Oficina General de Comunicación<br />
 </p><p>
 Hugo Contreras<br />
 Sub Dir Prensa y Difusión Ofic Gral Comunicaciones<br />
-<a href="mailto:hcontreras@rree.gob.pe"> hcontreras@rree.gob.pe>hcontreras@rree.gob.pe</a>
-</p><br /> 
+<a href="mailto:hcontreras@rree.gob.pe"> hcontreras@rree.gob.pe</a>
+</p>
 <p>
 Cielo Cano Gallardo<br />
 Dirección de Promoción de Inversiones<br />
